# dist/openapi.yaml
@@ -174,6 +174,24 @@ paths:
                   $ref: '#/components/schemas/RecipePreview'
         "204":
           description: No content to return.
+  /createRecipe:
+    post:
+      tags:
+      - Recipes
+      summary: A new recipe from the client is added to the server
+      description: A JSON object contains all the details about the new recipe.
+      requestBody:
+        description: Recipe to add
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Recipe'
+        required: true
+      responses:
+        "201":
+          description: A new recipe has been added
+        "400":
+          description: Wrong input parameters
 components:
   schemas:
     User:
@@ -268,4 +286,49 @@ components:
           type: boolean
           description: indication if the recipe is gluten free
           example: false
+    Recipe:
+      type: object
+      properties:
+        title:
+          type: string
+          description: recipe name
+          example: Simple Macaroni and Cheese
+        readyInMinutes:
+          type: integer
+          description: the time takes to make this recipe
+          example: 45
+        image:
+          type: string
+          description: recipe image
+          format: URL
+          example: https://spoonacular.com/recipeimages/655455-566x370.jpg
+        aggregateLikes:
+          type: integer
+          description: how many likes got this recipe
+          example: 5987
+        vegan:
+          type: integer
+          description: indication if the recipe is vegan. 0 if false, 1 if true
+          example: 0        
+        vegetarian:
+          type: integer
+          description: indication if the recipe is vegetarian. 0 if false, 1 if true
+          example: 0
+        glutenFree:
+          type: integer
+          description: indication if the recipe is gluten free. 0 if false, 1 if true
+          example: 0
+        extendedIngredients:
+          type: string
+          description: Recipe ingredients and quantity.
+          example: 4 eggs
+        analyzedInstructions:
+          type: string
+          description: Instructions for preparation.
+          example: Prepare the dough by adding water to flour.
+        servings:
+          type: integer
+          description: Number of servings the recipe makes.
+          example: 2
+      description: Model containing recipe info
   
